--- a/MetroAttractions/Base.lproj/Main.storyboard
+++ b/MetroAttractions/Base.lproj/Main.storyboard
@@ -191,10 +191,10 @@
             </objects>
             <point key="canvasLocation" x="1326" y="434"/>
         </scene>
-        <!--View Controller-->
+        <!--Search View Controller-->
         <scene sceneID="wYJ-ks-Utv">
             <objects>
-                <viewController id="uO1-gh-c6p" sceneMemberID="viewController">
+                <viewController id="uO1-gh-c6p" customClass="SearchViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="9cN-MX-0fA"/>
                         <viewControllerLayoutGuide type="bottom" id="NTL-6o-TJJ"/>
@@ -207,11 +207,149 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="184" id="VC0-O0-7fg">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="184" id="PSw-GQ-D5T" customClass="searchCell">
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VC0-O0-7fg" id="p9b-0O-FAr">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PSw-GQ-D5T" id="9YZ-eo-Ala">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K2a-ks-6M9">
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nj2-KI-whu">
+                                                            <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k6t-ZC-VtL">
+                                                            <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dit-HL-tPd">
+                                                            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEp-1L-HKX">
+                                                            <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="195" id="4rY-Uc-d7g"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <variation key="default">
+                                                                <mask key="constraints">
+                                                                    <exclude reference="4rY-Uc-d7g"/>
+                                                                </mask>
+                                                            </variation>
+                                                            <variation key="widthClass=compact">
+                                                                <mask key="constraints">
+                                                                    <include reference="4rY-Uc-d7g"/>
+                                                                </mask>
+                                                            </variation>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="Nj2-KI-whu" firstAttribute="leading" secondItem="Dit-HL-tPd" secondAttribute="trailing" constant="21" id="0Yn-fZ-n01"/>
+                                                        <constraint firstItem="k6t-ZC-VtL" firstAttribute="leading" secondItem="Dit-HL-tPd" secondAttribute="trailing" constant="21" id="1xU-XB-Swf"/>
+                                                        <constraint firstItem="Dit-HL-tPd" firstAttribute="leading" secondItem="K2a-ks-6M9" secondAttribute="leading" constant="8" id="5gG-2Q-cDs"/>
+                                                        <constraint firstAttribute="trailing" secondItem="hEp-1L-HKX" secondAttribute="trailing" constant="42" id="8UP-2J-E7U"/>
+                                                        <constraint firstItem="Dit-HL-tPd" firstAttribute="top" secondItem="K2a-ks-6M9" secondAttribute="top" constant="17" id="D8t-TM-MVq"/>
+                                                        <constraint firstItem="Nj2-KI-whu" firstAttribute="top" secondItem="hEp-1L-HKX" secondAttribute="bottom" constant="20" id="IqD-Ey-cc6"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Dit-HL-tPd" secondAttribute="bottom" constant="20" id="K1e-2r-8SJ"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Nj2-KI-whu" secondAttribute="trailing" constant="58" id="SdC-YI-1ZU"/>
+                                                        <constraint firstItem="hEp-1L-HKX" firstAttribute="leading" secondItem="Dit-HL-tPd" secondAttribute="trailing" constant="21" id="Wjc-m5-w0U"/>
+                                                        <constraint firstAttribute="trailing" secondItem="k6t-ZC-VtL" secondAttribute="trailing" constant="58" id="d9T-tE-vCc"/>
+                                                        <constraint firstAttribute="bottom" secondItem="k6t-ZC-VtL" secondAttribute="bottom" constant="20" id="hjU-ma-j3n"/>
+                                                        <constraint firstItem="k6t-ZC-VtL" firstAttribute="top" secondItem="Nj2-KI-whu" secondAttribute="bottom" constant="18" id="qh3-0y-YGs"/>
+                                                        <constraint firstItem="hEp-1L-HKX" firstAttribute="top" secondItem="K2a-ks-6M9" secondAttribute="top" constant="17" id="wld-12-kwY"/>
+                                                    </constraints>
+                                                    <variation key="default">
+                                                        <mask key="subviews">
+                                                            <exclude reference="Nj2-KI-whu"/>
+                                                            <exclude reference="k6t-ZC-VtL"/>
+                                                            <exclude reference="Dit-HL-tPd"/>
+                                                            <exclude reference="hEp-1L-HKX"/>
+                                                        </mask>
+                                                        <mask key="constraints">
+                                                            <exclude reference="0Yn-fZ-n01"/>
+                                                            <exclude reference="IqD-Ey-cc6"/>
+                                                            <exclude reference="SdC-YI-1ZU"/>
+                                                            <exclude reference="8UP-2J-E7U"/>
+                                                            <exclude reference="Wjc-m5-w0U"/>
+                                                            <exclude reference="wld-12-kwY"/>
+                                                            <exclude reference="1xU-XB-Swf"/>
+                                                            <exclude reference="d9T-tE-vCc"/>
+                                                            <exclude reference="hjU-ma-j3n"/>
+                                                            <exclude reference="qh3-0y-YGs"/>
+                                                            <exclude reference="5gG-2Q-cDs"/>
+                                                            <exclude reference="D8t-TM-MVq"/>
+                                                            <exclude reference="K1e-2r-8SJ"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <variation key="widthClass=compact">
+                                                        <mask key="subviews">
+                                                            <include reference="Nj2-KI-whu"/>
+                                                            <include reference="k6t-ZC-VtL"/>
+                                                            <include reference="Dit-HL-tPd"/>
+                                                            <include reference="hEp-1L-HKX"/>
+                                                        </mask>
+                                                        <mask key="constraints">
+                                                            <include reference="0Yn-fZ-n01"/>
+                                                            <include reference="IqD-Ey-cc6"/>
+                                                            <include reference="SdC-YI-1ZU"/>
+                                                            <include reference="8UP-2J-E7U"/>
+                                                            <include reference="Wjc-m5-w0U"/>
+                                                            <include reference="wld-12-kwY"/>
+                                                            <include reference="1xU-XB-Swf"/>
+                                                            <include reference="d9T-tE-vCc"/>
+                                                            <include reference="hjU-ma-j3n"/>
+                                                            <include reference="qh3-0y-YGs"/>
+                                                            <include reference="5gG-2Q-cDs"/>
+                                                            <include reference="D8t-TM-MVq"/>
+                                                            <include reference="K1e-2r-8SJ"/>
+                                                        </mask>
+                                                    </variation>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.91177398990000003" green="0.91177398990000003" blue="0.91177398990000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="K2a-ks-6M9" firstAttribute="top" secondItem="9YZ-eo-Ala" secondAttribute="topMargin" constant="4" id="NQt-he-fgC"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="K2a-ks-6M9" secondAttribute="bottom" constant="3" id="WJ3-0V-oy7"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="K2a-ks-6M9" secondAttribute="trailing" constant="5" id="YPT-oH-hlh"/>
+                                                <constraint firstItem="K2a-ks-6M9" firstAttribute="leading" secondItem="9YZ-eo-Ala" secondAttribute="leadingMargin" constant="6" id="fGK-wl-WJy"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="subviews">
+                                                    <exclude reference="K2a-ks-6M9"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <exclude reference="NQt-he-fgC"/>
+                                                    <exclude reference="WJ3-0V-oy7"/>
+                                                    <exclude reference="YPT-oH-hlh"/>
+                                                    <exclude reference="fGK-wl-WJy"/>
+                                                </mask>
+                                            </variation>
+                                            <variation key="widthClass=compact">
+                                                <mask key="subviews">
+                                                    <include reference="K2a-ks-6M9"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <include reference="NQt-he-fgC"/>
+                                                    <include reference="WJ3-0V-oy7"/>
+                                                    <include reference="YPT-oH-hlh"/>
+                                                    <include reference="fGK-wl-WJy"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="address" destination="Nj2-KI-whu" id="Pt5-ge-P3g"/>
+                                            <outlet property="imageView" destination="Dit-HL-tPd" id="dsM-vB-moy"/>
+                                            <outlet property="ratingLabel" destination="k6t-ZC-VtL" id="3Ai-Ij-kj4"/>
+                                            <outlet property="titleLabel" destination="hEp-1L-HKX" id="DXL-B3-i2x"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -249,7 +387,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F4N-P6-Jz3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2025" y="436"/>
+            <point key="canvasLocation" x="2025" y="430"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="h1K-jM-huV">
